Services/Utilities/Dionysus/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dionysus-api
  namespace: dionysus
  labels:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: dionysus
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dionysus
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: docker.io/tobiassaaby/dionysus-api:8a27d623a2cf6f34ca7742cfb8f41dbba0f80a68
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
