Services/Utilities/Dionysus/web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dionysus-web
  namespace: dionysus
  labels:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: web
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: dionysus
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dionysus
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: docker.io/tobiassaaby/dionysus-web:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
