Services/Utilities/Dionysus/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dionysus-api
  namespace: dionysus
  labels:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
