Services/Utilities/Dionysus/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dionysus-postgres
  labels:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
