Services/Utilities/Dionysus/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dionysus-web
  labels:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dionysus
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
